--- a/frontend/src/pages/splash-screen/SplashScreen.css
+++ b/frontend/src/pages/splash-screen/SplashScreen.css
@@ -1,1 +1,18 @@
-/*# sourceMappingURL=SplashScreen.css.map */
+.splashCont {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 3em;
+  background-color: #2A3950;
+}
+.splashCont img {
+  width: 200px;
+  height: 200px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: center;
+     object-position: center;
+}/*# sourceMappingURL=SplashScreen.css.map */
