--- a/frontend/src/components/main.css
+++ b/frontend/src/components/main.css
@@ -1,24 +1,17 @@
 .googleIconLogin {
   background-color: #e9edef;
   border-radius: 100%;
-  width: 2em;
-  height: 2em;
+  width: 1.5em;
+  height: 1.5em;
   padding: 0.2em;
-  margin-right: 0.5em;
+  margin-right: 0.8em;
 }
 
 .dialogContent-sts svg {
   font-size: 0.8em;
-  color: #aebac1;
+  color: #e9edef;
 }
 
 .dialog-sts {
   z-index: 800 !important;
-}
-
-.emojiPickerCont-sts {
-  position: fixed !important;
-  left: 1em !important;
-  bottom: 1em !important;
-  z-index: 1000 !important;
 }/*# sourceMappingURL=main.css.map */
