--- a/frontend/src/components/main.scss
+++ b/frontend/src/components/main.scss
@@ -1,7 +1,7 @@
 $primary-strong: #e9edef;
+$black: #303233;
 
 .googleIconLogin {
-    background-color: $primary-strong;
     border-radius: 100%;
     width: 1.5em;
     height: 1.5em;
