--- a/frontend/src/pages/home/Home.scss
+++ b/frontend/src/pages/home/Home.scss
@@ -6,7 +6,7 @@ $lightBlue: #C6CEFF;
 
 .home {
     width: 100vw;
-    height: 100vh;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
