--- a/frontend/src/components/profile/Profile.scss
+++ b/frontend/src/components/profile/Profile.scss
@@ -27,6 +27,10 @@ $black: #303233;
         cursor: pointer;
     }
 
+    input {
+        width: 180px;
+    }
+
     input,
     label {
         font-size: 0.8em;
