--- a/frontend/src/components/profile/Profile.css
+++ b/frontend/src/components/profile/Profile.css
@@ -24,6 +24,9 @@
   border-radius: 12px;
   cursor: pointer;
 }
+.profile input {
+  width: 180px;
+}
 .profile input,
 .profile label {
   font-size: 0.8em;
