--- a/frontend/src/pages/home/Home.css
+++ b/frontend/src/pages/home/Home.css
@@ -1,11 +1,42 @@
 .home {
   width: 100vw;
-  height: -moz-fit-content;
-  height: fit-content;
+  height: calc(100% - 66px);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   gap: 1em;
   padding: 1em;
+}
+.home .loader-cont {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.home .boards-cont {
+  width: 100%;
+  height: 100%;
+  padding: 1em;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1em;
+}
+.home .boards-cont .single-board {
+  width: 100%;
+  height: 10em;
+}
+.home .boards-cont .add-board-form {
+  width: 100%;
+  height: 10em;
+  border: 2px dashed #dedede;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+}
+.home .boards-cont .add-board-form input {
+  font-size: 0.8em;
+  text-align: center;
 }/*# sourceMappingURL=Home.css.map */
