--- a/frontend/src/pages/home/Home.scss
+++ b/frontend/src/pages/home/Home.scss
@@ -3,14 +3,53 @@ $semiDarkBlue: #0F6BAC;
 $blue: #258BD6;
 $semiLightBlue: #85B7FE;
 $lightBlue: #C6CEFF;
+$lightGrey: #dedede;
 
 .home {
     width: 100vw;
-    height: fit-content;
+    height: calc(100% - 66px);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     gap: 1em;
     padding: 1em;
+
+    .loader-cont {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .boards-cont {
+        width: 100%;
+        height: 100%;
+        padding: 1em;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1em;
+
+        .single-board {
+            width: 100%;
+            height: 10em;
+        }
+
+        .add-board-form {
+            width: 100%;
+            height: 10em;
+            border: 2px dashed $lightGrey;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 1em;
+
+            input {
+                font-size: 0.8em;
+                text-align: center;
+            }
+        }
+    }
+
 }
