--- a/frontend/src/pages/home/Home.css
+++ b/frontend/src/pages/home/Home.css
@@ -19,13 +19,30 @@
   width: 100%;
   height: 100%;
   padding: 1em;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
   gap: 1em;
+  flex-wrap: wrap;
 }
 .home .boards-cont .single-board {
-  width: 100%;
+  width: calc(50% - 0.5em);
   height: 10em;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.home .boards-cont .single-board p {
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  font-weight: bold;
+  text-shadow: 1px 4px 3px rgba(0, 0, 0, 0.78);
+  font-size: 1.3em;
 }
 .home .boards-cont .add-board-form {
   width: 100%;
