--- a/frontend/src/pages/home/Home.scss
+++ b/frontend/src/pages/home/Home.scss
@@ -4,6 +4,7 @@ $blue: #258BD6;
 $semiLightBlue: #85B7FE;
 $lightBlue: #C6CEFF;
 $lightGrey: #dedede;
+$white: #fff;
 
 .home {
     width: 100vw;
@@ -27,13 +28,32 @@ $lightGrey: #dedede;
         width: 100%;
         height: 100%;
         padding: 1em;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
         gap: 1em;
+        flex-wrap: wrap;
 
         .single-board {
-            width: 100%;
+            width: calc(50% - 0.5em);
             height: 10em;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+
+            p {
+                width: 100%;
+                text-align: center;
+                color: $white;
+                font-weight: bold;
+                text-shadow: 1px 4px 3px rgba(0, 0, 0, 0.78);
+                font-size: 1.3em;
+            }
+
         }
 
         .add-board-form {
