--- a/frontend/src/pages/home/Home.scss
+++ b/frontend/src/pages/home/Home.scss
@@ -34,26 +34,51 @@ $white: #fff;
         gap: 1em;
         flex-wrap: wrap;
 
-        .single-board {
+        .single-board-cont {
             width: calc(50% - 0.5em);
             height: 10em;
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             cursor: pointer;
+            position: relative;
 
-            p {
-                width: 100%;
-                text-align: center;
+            svg {
+                position: absolute;
+                top: -6px;
+                right: -6px;
+                z-index: 10;
+                background-color: $darkBlue;
                 color: $white;
-                font-weight: bold;
-                text-shadow: 1px 4px 3px rgba(0, 0, 0, 0.78);
-                font-size: 1.3em;
+                border-radius: 20px;
+                padding: 2px;
+                cursor: pointer;
             }
 
+            .single-board {
+                width: 100%;
+                height: 100%;
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: absolute;
+                top: 0;
+                left: 0;
+
+                p {
+                    width: 100%;
+                    text-align: center;
+                    color: $white;
+                    font-weight: bold;
+                    text-shadow: 1px 4px 3px rgba(0, 0, 0, 0.78);
+                    font-size: 1.3em;
+                }
+
+                input{
+                    color: $white;
+                }
+
+            }
         }
 
         .add-board-form {
@@ -70,6 +95,7 @@ $white: #fff;
                 text-align: center;
             }
         }
+
     }
 
 }
